# routes/authRoute.js
@@ -1,8 +1,9 @@
 const express = require('express');
 const {authenticateToken, authorizeRole} = require('../middleware/authMiddleware');
 const router = express.Router();
-const {login} = require('../controllers/authController');
+const {login, auth} = require('../controllers/authController');
 
 router.post('/api/auth/login', login);
+router.get('/api/auth', authenticateToken, auth);
 
 module.exports = router;
